<resources>
    <string name="app_name">Smart Archive</string>
    <string name="details_category">Category: %1$s</string>
    <string name="details_date">Date: %1$s</string>
    <string name="details_size">Size: %1$s</string>
    <string name="action_share">Share</string>
    <string name="action_delete">Delete</string>
    <string name="menu_title_toggle_view">Toggle View</string>
    <string name="menu_title_sort">Sort</string>
    <string name="menu_title_search">Search</string>
    <string name="menu_title_details">Details</string>
    <string name="empty_view_title">Your Archive is Empty</string>
    <string name="empty_view_subtitle">Share a file from another app to get started.</string>
    <string name="empty_view_icon_content_description">Empty Archive Icon</string>
    <string name="file_preview_content_description">File preview</string>
    <string name="Ayarlar">Settings</string>
    <string name="dosya_tipi_konu">File Type Icon</string>
    <string name="sort_dialog_title">Sort by</string>
    <string name="sort_date_desc">Date (Newest to Oldest)</string>
    <string name="sort_name_asc">Name (A-Z)</string>
    <string name="sort_name_desc">Name (Z-A)</string>
    <string name="sort_size_asc">Size (Smallest to Largest)</string>
    <string name="sort_size_desc">Size (Largest to Smallest)</string>
    <string name="cancel">Cancel</string>
    <string name="yes_delete">Yes, Delete</string>
    <string name="delete_confirmation_message">Are you sure you want to permanently delete the selected files?</string>
    <string name="error_file_not_found">Error: File not found.</string>
    <string name="error_no_app_to_open">No application found to open this file type.</string>
    <string name="files_shared_not_found">No files found to share.</string>
    <string name="error_no_app_for_action">No application found to perform this action.</string>
    <string name="files_deleted_toast">%1$d files deleted.</string>
    <string name="file_deleted_toast">1 file deleted.</string>
    <string name="give_file_a_name">Give the file a name</string>
    <string name="save">Save</string>
    <string name="file_not_received">File could not be received.</string>
    <string name="file_saved_as">Saved as \'%1$s\'!</string>
    <string name="error_file_not_saved">Error: File could not be saved.</string>
    <string name="error_invalid_name">Please enter a valid name.</string>
    <string name="app_theme">App Theme</string>
    <string name="theme_light">Light</string>
    <string name="theme_dark">Dark</string>
    <string name="theme_system">System Default</string>
    <string name="file_already_exists">File Already Exists</string>
    <string name="overwrite_confirmation">A file named \'%1$s\' already exists. Do you want to replace it?</string>
    <string name="replace">Replace</string>
    <string name="category_office">Office Files</string>
    <string name="category_images">Image Files</string>
    <string name="category_videos">Video Files</string>
    <string name="category_audio">Audio Files</string>
    <string name="category_archives">Archive Files</string>
    <string name="category_other">Other Files</string>
    <string name="action_settings">Settings</string>
    <string name="onboarding_image_description">Application usage guide</string>
    <string name="action_close">Close</string>
    <string name="duplicate_file_found">Duplicate File Found</string>
    <string name="duplicate_file_message">This file is already archived as \'%1$s\'.\n\nSaving it again will create a copy named \'%2$s\'. Do you want to continue?</string>
    <string name="action_save_copy">Save Copy</string>
    <string name="action_privacy_policy">Privacy Policy</string>
    <string name="privacy_policy_url" translatable="false">https://www.codenzi.com/privacy-smart-archive.html</string>
    <string name="action_add_file">Add File</string>
    <string name="play_pause_button">Play or Pause Audio</string>
    <string name="manage_categories">Manage Categories</string>
    <string name="add_new_category">Add New Category</string>
    <string name="add_new_category_spinner">Add New Category...</string>
    <string name="rename_category">Rename Category</string>
    <string name="action_rename">Rename</string>
    <string name="add">Add</string>
    <string name="category_name_empty">Category name cannot be empty.</string>
    <string name="category_already_exists">This category already exists.</string>
    <string name="cannot_delete_category_title">Cannot Delete Category</string>
    <string name="cannot_delete_category_message">There are %1$d file(s) in the \'%2$s\' category. Please move them to another category before deleting.</string>
    <string name="delete_category_confirmation_title">Delete \'%1$s\'?</string>
    <string name="delete_category_confirmation_message">This category will be permanently deleted. This action cannot be undone.</string>
    <string name="please_select_or_create_category">Please select or create a category.</string>
    <string name="category_name_hint">Category Name</string>
    <string name="select_a_category">Select a category...</string>
    <string name="category_selection_info">If no category is selected, a suitable one will be assigned automatically.</string>
    <string name="action_move_category">Move Category</string>
    <string name="file_moved_to_category">File moved to \'%1$s\' category.</string>
    <string name="add_file_dialog_title">Add a New File</string>
    <string name="option_take_photo">Take Photo</string>
    <string name="option_record_video">Record Video</string>
    <string name="option_from_local_files">Choose from Files</string>
    <string name="settings_category_general">General</string>
    <string name="settings_category_about">About</string>
    <string name="settings_category_drive">Google Drive Backup</string>
    <string name="settings_drive_title">Google Drive</string>
    <string name="settings_google_logo_desc">Google Logo</string>
    <string name="action_sign_in">Sign In</string>
    <string name="action_sign_out">Sign Out</string>
    <string name="action_backup_now">Backup Now</string>
    <string name="action_restore">Restore</string>
    <string name="action_delete_drive_data">Delete Drive Data</string>
    <string name="status_not_signed_in">Not signed in</string>
    <string name="status_signed_in_as">Signed in as: %1$s</string>
    <string name="last_backup_checking">Checking for backup...</string>
    <string name="last_backup_at">Last backup: %1$s</string>
    <string name="last_backup_never">No backup has been made before.</string>
    <string name="ok">OK</string>
    <string name="settings_auto_backup_title">Automatic Backup</string>
    <string name="settings_auto_backup_description">Automatically backs up your data to Google Drive daily when connected to Wi-Fi and charging.</string>
    <string name="auto_backup_sign_in_required">Please sign in to your Google account to enable automatic backup.</string>
    <string name="auto_backup_enabled_toast">Automatic backup enabled.</string>
    <string name="auto_backup_disabled_toast">Automatic backup disabled.</string>
    <string name="notification_permission_title">Notification Permission</string>
    <string name="notification_permission_rationale">This permission is needed to show the status of automatic backups. Without it, you won\'t know if your backups are successful.</string>
    <string name="notification_permission_denied">Notification permission denied. Automatic backup will be disabled.</string>
    <string name="backup_channel_name">Backup Notifications</string>
    <string name="backup_channel_description">Notifications for automatic backup status.</string>
    <string name="backup_notification_progress_title">Backing up your archive...</string>
    <string name="backup_success_title">Backup Complete</string>
    <string name="backup_success_message">Your archive was successfully backed up at %1$s.</string>
    <string name="backup_failed_title">Backup Failed</string>
    <string name="backup_failed_message">Could not back up your archive. Please check your internet connection and try again.</string>
    <string name="backup_failed_message_exception">An error occurred during backup: %s</string>
    <string name="action_next">Next</string>
    <string name="action_skip">Skip</string>
    <string name="action_finish">Finish</string>
    <string name="login_title">Secure Your Archive</string>
    <string name="login_description">Sign in with your Google account to automatically back up your files to Google Drive and keep them safe.</string>
    <string name="login_button_text">Sign In with Google</string>
    <string name="login_skip_button_text">Maybe Later</string>
    <string name="backup_found_title">Backup Found</string>
    <string name="backup_found_message">We found a backup from %s. Do you want to restore your data now?</string>
    <string name="action_restore_backup">Restore Backup</string>
    <string name="action_start_fresh">Skip &amp; Start Fresh</string>
    <string name="no_backup_found_title">No Backup Found</string>
    <string name="no_backup_found_message">Do you want to enable automatic backup to keep your data safe in the future?</string>
    <string name="action_enable_auto_backup">Enable Auto Backup</string>
    <string name="restoring_data_title">Restoring Data</string>
    <string name="restoring_data_message">Please wait while your data is being restored...</string>
    <string name="checking_backup_message">Checking for existing backups...</string>
    <string name="privacy_options">Privacy Options</string>
    <string name="privacy_options_error">Failed to load settings.</string>
    <string name="terms_agreement_text">I have read and agree to the <a href="https://www.codenzi.com/smart-term-of-use.html">Terms of Use</a></string>
    <string name="accept_terms_to_continue">Please accept the Terms of Use to continue.</string>
    <string name="action_terms_of_use">Terms of Use</string>
    <string name="terms_of_use_url" translatable="false">https://www.codenzi.com/smart-term-of-use.html</string>
    <string name="action_contact_us">Contact Us</string>
    <string name="contact_us_email" translatable="false">info@codenzi.com</string>
    <string name="contact_us_subject">Feedback for Smart Archive App</string>
    <string name="backup_starting_title">Starting Backup</string>
    <string name="backup_starting_message">Your data is being backed up to Google Drive. Please wait...</string>
    <string name="backup_success">Backup completed successfully!</string>
    <string name="backup_error">An error occurred during backup. Please check your internet connection.</string>
    <string name="restore_data_title">Restore Data</string>
    <string name="restore_data_message">All your current data will be deleted and replaced with data from the last backup. This action cannot be undone. Are you sure?</string>
    <string name="restore_data_confirm">Yes, Restore</string>
    <string name="restoring_dialog_title">Restoring</string>
    <string name="restoring_dialog_message">Your backups are being downloaded, please wait...</string>
    <string name="restore_success_restarting">Data has been successfully restored. The application is restarting.</string>
    <string name="restore_error_no_backup">No backup found to restore.</string>
    <string name="restore_error_download">Could not download the backup. Check your internet connection or Google Drive permissions.</string>
    <string name="restore_error_validation">The backup file is corrupt or invalid. Please try taking a new backup.</string>
    <string name="restore_error_generic">Files could not be restored. Make sure you have enough space on your device.</string>
    <string name="restore_error_unknown">An unknown error occurred. Please try again later.</string>
    <string name="restore_failed_title">Restore Failed</string>
</resources>