<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_share"
        android:icon="@drawable/ic_share"
        android:title="@string/action_share"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_move"
        android:icon="@drawable/ic_drive_file_move"
        android:title="@string/action_move_category"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_details"
        android:icon="@drawable/ic_info"
        android:title="@string/menu_title_details"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_delete"
        android:icon="@drawable/ic_delete"
        android:title="@string/action_delete"
        app:showAsAction="ifRoom|withText" />
</menu>